Prototype - Fix menu overlaping on mobile, add space between blog entries with large names on mobile, add style to about and projects sections

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h1{
 }
 
 section{
-	border-bottom: 1px solid  #934838;;
+	border-bottom: 1px solid  #934838;
 	padding-bottom: 45px;
 }
 
@@ -106,7 +106,7 @@ a h3{
 }
 
 .r-post-title{
-	font:14px/2 'Mandali', sans-serif;
+	font:14px/1.1 'Mandali', sans-serif;
 	color: #F8F8F8;
 	font-weight: bold;
 }
@@ -225,6 +225,7 @@ nav ul {
   margin: 0 auto;
   list-style: none;
   text-align: center;
+  z-index: -100;
 }
 nav ul li {
   display: inline-block;
@@ -296,45 +297,49 @@ nav ul{
 
   .main-nav{
   	/*display: inline-table;*/
-}
+  }
 
-.main-nav ul li a{
-	display: none;
-	overflow: hidden;
-}
+  .main-nav ul li a{
+    display: none;
+    overflow: hidden;
+  }
 
-.main-nav ul li a.icon{
-	float: right;
-	display: block;
-}
+  .main-nav ul li a.icon{
+    float: right;
+    display: block;
+  }
 
-nav ul{
-	padding: 7px 0px 0px 0px;
-	width: 100%;
-	position: absolute;
-}
+  nav ul{
+    padding: 7px 0px 0px 0px;
+    width: 100%;
+    position: absolute;
+  }
 
-nav ul li{
-	display: block;
-	margin: 0px;
-	background-color: #1B1B1B;
-}
+  nav ul li{
+    display: block;
+    margin: 0px;
+    background-color: #1B1B1B;
+  }
 
-.main-nav.responsive {
-	position: relative;
-	display: table;
-	height: 200px;
-}
+  .main-nav.responsive {
+    position: relative;
+    display: table;
+    height: 200px;
+  }
 
-.main-nav.responsive .icon {
-	position: absolute;
+  .main-nav.responsive .icon {
+    position: absolute;
     right: 0;
     top: 0;
- }
+  }
 
- .main-nav.responsive a {
- 	float: none;
+  .main-nav.responsive a {
+    float: none;
     display: block;
     text-align: left;
+  }
+
+  .main-nav.responsive ul{
+    z-index: 100;
   }
 }
